# dsk_commander

./: .gitignore  BUILD.md  HISTORY.md  LINKS.md  MANUAL.md  README.md
.build/: build-linux.sh  build-macos.sh  build-win-i386.bat  build-win-latest.bat  build-win-mingw.bat  build-win-msvc.bat  extract_json.py  macos_build_qt_universal.sh  portable-msvc.py  update_translations.bat  vars-mingw-latest.cmd  vars-mingw-qt5.15.cmd  vars-mingw-qt5.6.cmd  vars-msvc-latest.cmd  win_prepare_release.bat
.build/.linux/DISKCommander.AppDir/usr/share/applications/: DISKCommander.desktop
.build/.macos/: DISK_Commander.icns  make_icon.py
deploy/: config.json  dsk_com.ini
src/: .gitignore  CMakeLists.txt  CustomFileSystemModel.cpp  CustomFileSystemModel.h  CustomSortProxyModel.cpp  CustomSortProxyModel.h  FileOperations.cpp  FileOperations.h  FilePanel.cpp  FilePanel.h  FileTable.cpp  FileTable.h  aboutdlg.ui  charmaps.h  convertdialog.cpp  convertdialog.h  convertdialog.ui  fileinfodialog.ui  fileparamdialog.cpp  fileparamdialog.h  formatdialog.cpp  formatdialog.h  globals.h  globals.h.in  main.cpp  mainutils.cpp  mainutils.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  placeholders.h  resources.qrc  viewdialog.cpp  viewdialog.h  viewdialog.ui
src/i18n/: config.qml  en_us.ts  ru_ru.ts
src/resources/files/: Info.plist  basic.css  config.json  stylesheet.qss
